--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 
 <body class="app">
   <!-- Enjoy!  -->
+  <h1>List of GitHub Users</h1>
 
+  <table>
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Repositories</th>
+        <th scope="col">Sum of stars</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 </body>
 <script src="main.js" type="module"></script>
 </html>
